--- a/_templates/genel-sablon.html
+++ b/_templates/genel-sablon.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adalet GYS Portalı</title>
-    <link href="/assets/css/tailwind.css" rel="stylesheet">
+    <link href="/adalet-gys-portal/assets/css/tailwind.css" rel="stylesheet">
 </head>
 <body class="bg-slate-50">
     <header class="navbar bg-white shadow-md">
@@ -49,17 +49,17 @@
         <div class="container mx-auto px-4">
             <div class="social-links flex space-x-4 justify-center mb-4">
                 <a href="#" class="social-link hover:text-primary transition-colors" title="Facebook" target="_blank" rel="noopener noreferrer">
-                    <svg class="h-5 w-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <svg class="h-5 w-5 fill-primary" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <path d="M9.19795 21.5H13.198V13.4901H16.1618L16.6748 9.49012H13.198V7.5C13.198 6.94772 13.6457 6.5 14.198 6.5H16.5V2.5H13.198C11.0768 2.5 9.19795 4.37888 9.19795 6.5V9.49012H7.19795L6.68495 13.4901H9.19795V21.5Z"></path>
                     </svg>
                 </a>
                 <a href="#" class="social-link hover:text-primary transition-colors" title="X (Twitter)" target="_blank" rel="noopener noreferrer">
-                    <svg class="h-5 w-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <svg class="h-5 w-5 fill-primary" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path>
                     </svg>
                 </a>
                 <a href="#" class="social-link hover:text-primary transition-colors" title="Instagram" target="_blank" rel="noopener noreferrer">
-                    <svg class="h-5 w-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <svg class="h-5 w-5 fill-primary" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <path d="M12 16.1748C14.3013 16.1748 16.1748 14.3013 16.1748 12C16.1748 9.69873 14.3013 7.8252 12 7.8252C9.69873 7.8252 7.8252 9.69873 7.8252 12C7.8252 14.3013 9.69873 16.1748 12 16.1748Z"></path>
                         <path d="M16.7913 2.08691H7.20874C4.36449 2.08691 2.08691 4.36449 2.08691 7.20874V16.7913C2.08691 19.6355 4.36449 21.9131 7.20874 21.9131H16.7913C19.6355 21.9131 21.9131 19.6355 21.9131 16.7913V7.20874C21.9131 4.36449 19.6355 2.08691 16.7913 2.08691ZM18.5087 16.7913C18.5087 17.7346 17.7346 18.5087 16.7913 18.5087H7.20874C6.26549 18.5087 5.49133 17.7346 5.49133 16.7913V7.20874C5.49133 6.26549 6.26549 5.49133 7.20874 5.49133H16.7913C17.7346 5.49133 18.5087 6.26549 18.5087 7.20874V16.7913Z"></path>
                         <path d="M16.9201 7.74953C16.5332 7.74953 16.2197 7.43603 16.2197 7.04914C16.2197 6.66224 16.5332 6.34875 16.9201 6.34875C17.307 6.34875 17.6205 6.66224 17.6205 7.04914C17.6205 7.43603 17.307 7.74953 16.9201 7.74953Z"></path>
@@ -74,6 +74,6 @@
             </div>
         </div>
     </footer>
-    <script src="/assets/js/main.js"></script>
+    <script src="/adalet-gys-portal/assets/js/main.js"></script>
 </body>
 </html>
