--- a/index.html
+++ b/index.html
@@ -4,72 +4,115 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adalet GYS Portalı - Görevde Yükselme Sınavı Hazırlık Platformu</title>
-    
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
+    <link href="/adalet-gys-portal/assets/css/tailwind.css" rel="stylesheet">
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
-
-<body data-needs-template="page">
-    <main class="container page-content">
+<body class="bg-slate-50" data-needs-template="page">
+    <header class="navbar bg-white shadow-md">
+        <div class="container mx-auto px-4 py-4 flex justify-between items-center">
+            <a href="/adalet-gys-portal/index.html" class="navbar-brand text-2xl font-bold text-primary">Adalet GYS Portalı</a>
+            <button class="navbar-toggle md:hidden" aria-expanded="false" aria-label="Menüyü aç/kapat">
+                <svg class="w-6 h-6 text-slate-700" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+                </svg>
+            </button>
+            <nav class="navbar-nav hidden md:flex items-center space-x-6">
+                <a href="/adalet-gys-portal/index.html" class="nav-link text-slate-700 hover:text-primary transition-colors">Ana Sayfa</a>
+                <div class="nav-item dropdown relative">
+                    <a href="/adalet-gys-portal/konu-anlatimlari/" class="nav-link flex items-center text-slate-700 hover:text-primary transition-colors">
+                        Konu Anlatımları
+                        <svg class="w-4 h-4 ml-1 text-slate-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+                        </svg>
+                    </a>
+                    <div class="dropdown-menu absolute hidden bg-white shadow-md rounded-md mt-2 w-48">
+                        <a href="/adalet-gys-portal/konu-anlatimlari/ortak-konular/" class="block px-4 py-2 text-slate-700 hover:bg-slate-100">Ortak Konular</a>
+                        <a href="/adalet-gys-portal/konu-anlatimlari/alan-konulari/" class="block px-4 py-2 text-slate-700 hover:bg-slate-100">Alan Konuları</a>
+                    </div>
+                </div>
+                <div class="nav-item dropdown relative">
+                    <a href="/adalet-gys-portal/deneme-sinavlari/" class="nav-link flex items-center text-slate-700 hover:text-primary transition-colors">
+                        Deneme Sınavları
+                        <svg class="w-4 h-4 ml-1 text-slate-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+                        </svg>
+                    </a>
+                    <div class="dropdown-menu absolute hidden bg-white shadow-md rounded-md mt-2 w-48">
+                        <a href="/adalet-gys-portal/deneme-sinavlari/genel-denemeler/" class="block px-4 py-2 text-slate-700 hover:bg-slate-100">Genel Denemeler</a>
+                        <a href="/adalet-gys-portal/deneme-sinavlari/alan-denemeleri/" class="block px-4 py-2 text-slate-700 hover:bg-slate-100">Alan Denemeleri</a>
+                        <a href="/adalet-gys-portal/deneme-sinavlari/ortak-konular-denemeleri/" class="block px-4 py-2 text-slate-700 hover:bg-slate-100">Ortak Konular Denemeleri</a>
+                    </div>
+                </div>
+                <a href="/adalet-gys-portal/hakkinda.html" class="nav-link text-slate-700 hover:text-primary transition-colors">Hakkında</a>
+                <a href="/adalet-gys-portal/iletisim.html" class="nav-link text-slate-700 hover:text-primary transition-colors">İletişim</a>
+            </nav>
+        </div>
+    </header>
+    <main class="container mx-auto px-4 py-8 page-content">
         <section class="hero text-center bg-white p-8 md:p-12 rounded-lg shadow-lg mb-12">
             <h1 class="text-4xl md:text-5xl font-bold text-slate-800 mb-4">Görevde Yükselme Sınavında Başarıya Ulaşın</h1>
-            <p class="subtitle text-lg md:text-xl max-w-3xl mx-auto">
+            <p class="subtitle text-lg md:text-xl max-w-3xl mx-auto text-slate-600">
                 Adalet Bakanlığı personeli için özel olarak hazırlanmış güncel deneme sınavları, konu testleri ve detaylı analizlerle kariyerinizde bir sonraki adımı atın.
             </p>
             <div class="mt-8">
-                <a href="/adalet-gys-portal/deneme-sinavlari/" class="btn text-lg px-8 py-3">Hemen Denemeye Başla</a>
+                <a href="/adalet-gys-portal/deneme-sinavlari/" class="btn text-lg px-8 py-3 bg-primary text-white hover:bg-secondary transition-colors rounded-md">Hemen Denemeye Başla</a>
             </div>
         </section>
-
         <section class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 mb-12 text-center">
-            <div class="bg-white p-6 rounded-lg border">
-                <div class="bg-teal-100 p-3 rounded-full inline-flex items-center justify-center mb-4">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7"></path></svg>
+            <div class="bg-white p-6 rounded-lg border border-border">
+                <div class="bg-primary/10 p-3 rounded-full inline-flex items-center justify-center mb-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 fill-primary" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7"></path>
+                    </svg>
                 </div>
                 <h3 class="text-xl font-semibold text-slate-800 mb-2">Tamamen Ücretsiz</h3>
                 <p class="text-slate-600">Tüm konu anlatımlarına ve deneme sınavlarına hiçbir ücret ödemeden erişin.</p>
             </div>
-            <div class="bg-white p-6 rounded-lg border">
-                <div class="bg-amber-100 p-3 rounded-full inline-flex items-center justify-center mb-4">
-                     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-amber-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M8 11V7a4 4 0 118 0v4M5 9h14l1 12H4L5 9z"></path></svg>
+            <div class="bg-white p-6 rounded-lg border border-border">
+                <div class="bg-accent/10 p-3 rounded-full inline-flex items-center justify-center mb-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 fill-accent" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 11V7a4 4 0 118 0v4M5 9h14l1 12H4L5 9z"></path>
+                    </svg>
                 </div>
                 <h3 class="text-xl font-semibold text-slate-800 mb-2">Üyelik Gerektirmez</h3>
                 <p class="text-slate-600">Kayıt olmadan, kişisel bilgi paylaşmadan doğrudan çalışmaya başlayın.</p>
             </div>
-            <div class="bg-white p-6 rounded-lg border">
-                 <div class="bg-blue-100 p-3 rounded-full inline-flex items-center justify-center mb-4">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4 4v5h5V4H4zm0 9h5v5H4v-5zm9-9h5v5h-5V4zm0 9h5v5h-5v-5z"></path></svg>
+            <div class="bg-white p-6 rounded-lg border border-border">
+                <div class="bg-secondary/10 p-3 rounded-full inline-flex items-center justify-center mb-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 fill-secondary" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h5V4H4zm0 9h5v5H4v-5zm9-9h5v5h-5V4zm0 9h5v5h-5v-5z"></path>
+                    </svg>
                 </div>
                 <h3 class="text-xl font-semibold text-slate-800 mb-2">Sürekli Gelişim</h3>
                 <p class="text-slate-600">Bu platform, sizin geri bildirimlerinizle her gün büyüyen ve güncellenen bir projedir.</p>
             </div>
-             <div class="bg-white p-6 rounded-lg border">
-                 <div class="bg-rose-100 p-3 rounded-full inline-flex items-center justify-center mb-4">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-rose-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4 4v5h5V4H4zm0 9h5v5H4v-5zm9-9h5v5h-5V4zm0 9h5v5h-5v-5z"></path></svg>
+            <div class="bg-white p-6 rounded-lg border border-border">
+                <div class="bg-danger/10 p-3 rounded-full inline-flex items-center justify-center mb-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 fill-danger" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h5V4H4zm0 9h5v5H4v-5zm9-9h5v5h-5V4zm0 9h5v5h-5v-5z"></path>
+                    </svg>
                 </div>
                 <h3 class="text-xl font-semibold text-slate-800 mb-2">Güncel Mevzuat</h3>
                 <p class="text-slate-600">Sorular ve içerikler, en son mevzuat değişikliklerine göre düzenli olarak güncellenmektedir.</p>
             </div>
         </section>
-
         <section>
             <h2 class="text-3xl font-bold text-center text-slate-800 mb-8">Yeni Eklenenler</h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <a href="/adalet-gys-portal/deneme-sinavlari/genel-denemeler/deneme-1.html" class="category-card relative bg-white p-6 rounded-lg border shadow-sm flex flex-col hover:border-teal-500 hover:shadow-md transition-all">
-                    <span class="new-badge">YENİ</span>
+                <a href="/adalet-gys-portal/deneme-sinavlari/genel-denemeler/deneme-1.html" class="category-card relative bg-white p-6 rounded-lg border border-border shadow-sm flex flex-col hover:border-primary hover:shadow-md transition-all">
+                    <span class="new-badge bg-primary text-white text-xs font-semibold px-2 py-1 rounded absolute top-2 right-2">YENİ</span>
                     <h3 class="text-xl font-semibold text-slate-800 mb-3">Genel Deneme Sınavı - 1</h3>
                     <p class="text-slate-600 flex-grow">
                         Tüm ortak ve alan konularını içeren, tam kapsamlı ilk deneme sınavımız yayında!
                     </p>
                 </a>
-                <a href="/adalet-gys-portal/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html" class="category-card relative bg-white p-6 rounded-lg border shadow-sm flex flex-col hover:border-teal-500 hover:shadow-md transition-all">
+                <a href="/adalet-gys-portal/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html" class="category-card relative bg-white p-6 rounded-lg border border-border shadow-sm flex flex-col hover:border-primary hover:shadow-md transition-all">
                     <h3 class="text-xl font-semibold text-slate-800 mb-3">T.C. Anayasası Konu Anlatımı</h3>
                     <p class="text-slate-600 flex-grow">
                         Sınavda en çok soru gelen bölümlerden biri olan Anayasa konusu, özet notlarla hazırlandı.
                     </p>
                 </a>
-                <a href="/adalet-gys-portal/konu-anlatimlari/alan-konulari/yazi-isleri-muduru/" class="category-card relative bg-white p-6 rounded-lg border shadow-sm flex flex-col hover:border-teal-500 hover:shadow-md transition-all">
+                <a href="/adalet-gys-portal/konu-anlatimlari/alan-konulari/yazi-isleri-muduru/" class="category-card relative bg-white p-6 rounded-lg border border-border shadow-sm flex flex-col hover:border-primary hover:shadow-md transition-all">
                     <h3 class="text-xl font-semibold text-slate-800 mb-3">Yazı İşleri Müdürlüğü Alan Konuları</h3>
                     <p class="text-slate-600 flex-grow">
                         Yazı İşleri Müdürlüğü için %60'lık bölümü oluşturan tüm alan konuları listesi eklendi.
@@ -78,5 +121,35 @@
             </div>
         </section>
     </main>
+    <footer class="footer bg-slate-800 text-white py-6">
+        <div class="container mx-auto px-4">
+            <div class="social-links flex space-x-4 justify-center mb-4">
+                <a href="#" class="social-link hover:text-primary transition-colors" title="Facebook" target="_blank" rel="noopener noreferrer">
+                    <svg class="h-5 w-5 fill-primary" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path d="M9.19795 21.5H13.198V13.4901H16.1618L16.6748 9.49012H13.198V7.5C13.198 6.94772 13.6457 6.5 14.198 6.5H16.5V2.5H13.198C11.0768 2.5 9.19795 4.37888 9.19795 6.5V9.49012H7.19795L6.68495 13.4901H9.19795V21.5Z"></path>
+                    </svg>
+                </a>
+                <a href="#" class="social-link hover:text-primary transition-colors" title="X (Twitter)" target="_blank" rel="noopener noreferrer">
+                    <svg class="h-5 w-5 fill-primary" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path>
+                    </svg>
+                </a>
+                <a href="#" class="social-link hover:text-primary transition-colors" title="Instagram" target="_blank" rel="noopener noreferrer">
+                    <svg class="h-5 w-5 fill-primary" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path d="M12 16.1748C14.3013 16.1748 16.1748 14.3013 16.1748 12C16.1748 9.69873 14.3013 7.8252 12 7.8252C9.69873 7.8252 7.8252 9.69873 7.8252 12C7.8252 14.3013 9.69873 16.1748 12 16.1748Z"></path>
+                        <path d="M16.7913 2.08691H7.20874C4.36449 2.08691 2.08691 4.36449 2.08691 7.20874V16.7913C2.08691 19.6355 4.36449 21.9131 7.20874 21.9131H16.7913C19.6355 21.9131 21.9131 19.6355 21.9131 16.7913V7.20874C21.9131 4.36449 19.6355 2.08691 16.7913 2.08691ZM18.5087 16.7913C18.5087 17.7346 17.7346 18.5087 16.7913 18.5087H7.20874C6.26549 18.5087 5.49133 17.7346 5.49133 16.7913V7.20874C5.49133 6.26549 6.26549 5.49133 7.20874 5.49133H16.7913C17.7346 5.49133 18.5087 6.26549 18.5087 7.20874V16.7913Z"></path>
+                        <path d="M16.9201 7.74953C16.5332 7.74953 16.2197 7.43603 16.2197 7.04914C16.2197 6.66224 16.5332 6.34875 16.9201 6.34875C17.307 6.34875 17.6205 6.66224 17.6205 7.04914C17.6205 7.43603 17.307 7.74953 16.9201 7.74953Z"></path>
+                    </svg>
+                </a>
+            </div>
+            <p class="text-center text-sm">&copy; 2025 Adalet GYS Portalı. Tüm hakları saklıdır.</p>
+            <div class="legal-links flex justify-center space-x-4 mt-2 text-sm">
+                <a href="/adalet-gys-portal/gizlilik-politikasi.html" class="hover:text-primary transition-colors">Gizlilik Politikası</a>
+                <span>|</span>
+                <a href="/adalet-gys-portal/kullanim-kosullari.html" class="hover:text-primary transition-colors">Kullanım Koşulları</a>
+            </div>
+        </div>
+    </footer>
+    <script src="/adalet-gys-portal/assets/js/main.js"></script>
 </body>
 </html>
